--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -1,3 +1,15 @@
-- name: clang-format lint
-  uses: DoozyX/clang-format-lint-action@v0.5
+name: test-clang-format
 
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: DoozyX/clang-format-lint-action@v0.5
+        with:
+          source: '.'
+          extensions: 'h,c'
+          clangFormatVersion: 9
