--- a/.github/workflows/clang-format-inc.yml
+++ b/.github/workflows/clang-format-inc.yml
@@ -1,4 +1,4 @@
-name: test-clang-format
+name: Clang-Format Lint INC
 
 on: [push]
 
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v1
       - uses: DoozyX/clang-format-lint-action@v0.5
         with:
-          source: '.'
+          source: './Inc'
           extensions: 'h,c'
           clangFormatVersion: 6
